[package]
name = "aster-proxy"
version = "2.0.0"
authors = ["wayslog <zxs867179@gmail.com>"]
description = "A light, fast and powerful cache proxy written in Rust."
homepage = "https://github.com/wayslog/aster"
repository = "https://github.com/wayslog/aster"
documentation = "https://docs.rs/aster"
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "network-programming", "caching", "database"]
keywords = [ "cache", "redis", "memcache", "twemproxy"]
edition="2018"

[[bin]]
name = "aster-proxy"
path = "bin/proxy.rs"

[lib]
name = "libaster"
path = "src/lib.rs"

[dev-dependencies]
assert2 = "0.3.5"
criterion = "0.3.4"

[dependencies]
aho-corasick = "0.7.18"
bitflags = "1.2.1"
btoi = "0.4.2"
chrono = "0.4.19"
clap = "2.33.3"
env_logger = "0.8.3"
hotwatch = "0.4.5"
itoa = "0.4.7"
lazy_static = "1.4.0"
log = "0.4.14"
md5 = "0.7.0"
rand = "0.8.3"
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
sysinfo = "0.17.5"

thiserror = "1.0.24"
tokio = { version = "1.6.0", features = ["full"] }
toml = "0.5.8"
warp = "0.3.1"

nng-sys = { version = "1.4.0-rc", features = ["build-bindgen"] }
prost = "0.8.0"


[profile.release]
debug = true
lto = true

[build-dependencies]
prost-build = "0.8.0"
