[package]
name = "aster-proxy"
version = "2.0.0"
authors = ["wayslog <zxs867179@gmail.com>"]
description = "A light, fast and powerful cache proxy written in Rust."
homepage = "https://github.com/wayslog/aster"
repository = "https://github.com/wayslog/aster"
documentation = "https://docs.rs/aster"
license = "MIT"
readme = "README.md"
categories = ["asynchronous", "network-programming", "caching", "database"]
keywords = [ "cache", "redis", "memcache", "twemproxy"]
edition="2018"

[[bin]]
name = "aster-proxy"
path = "bin/proxy.rs"

[lib]
name = "libaster"
path = "src/lib.rs"

[dev-dependencies]
assert2 = "0.3.5"
criterion = "0.3.4"

[dependencies]
aho-corasick = "0.7.18"
bitflags = "1.3.2"
btoi = "0.4.2"
chrono = "0.4.19"
clap = "2.33.3"
env_logger = "0.9.0"
itoa = "0.4.8"
lazy_static = "1.4.0"
log = "0.4.14"
md5 = "0.7.0"
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.13.0", features = ["full"] }
toml = "0.5.8"

[profile.release]
debug = true
lto = true
